# play

./: .containerignore  .env.dist  .envrc  .gitignore  Dockerfile  README.md  chat_service.py  docker-compose.yml  justfile  main.py  main_simple.py  models.py  nginx.conf  patch.diff  pyproject.toml  requirements.md  requirements.txt  session_manager.py  setup_linux.sh  setup_simple.bat  setup_windows.ps1  start_game.bat  项目状态报告.md
deploy/: Containerfile  compose.yaml
deploy/caddy/: Caddyfile
src/: app.py  chat_service.py  links.py  models.py
src/play/: app.py  chat_service.py  links.py  models.py
static/: game.html  index.html
