[project]
name = "play"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "dashscope>=1.24.4",
  "langchain-community>=0.3.29",
  "langchain>=0.3.27",
  "python-dotenv==1.0.0",
  "qrcode>=8.2",
  "rich>=14.1.0",
  "streamlit>=1.49.1",
]

[dependency-groups]
dev = [
    "ruff>=0.12.12",
]
